[package]
name = "grbli"
version = "0.1.0"
edition = "2021"
authors = ["vgerber"]

license-file = "LICENSE"
keywords = ["grbl", "grblHAL"]
repository = "https://github.com/vgerber/grbl-interface"
description = "Interface for communicating with grblHAL devices."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.1"
log = "0.4.16"